--- a/index.html
+++ b/index.html
@@ -45,15 +45,9 @@
                 </li>
                 <li><a href="portfolio.html">Portfolio</a>
                 </li>
-                <li class="menu-item-has-children"><a href="#">Pages</a>
-                  <ul>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="team.html">Team</a></li>
-                    <li><a href="team-details.html">Team Details</a></li>
-                    <li><a href="case-study.html">Case Study Details</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                  </ul>
+                <li><a href="contact.html">Contact</a></li>
                 </li>
+                <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
           </div>
@@ -79,10 +73,10 @@
     <div class="cs-side_header_in">
       <div class="cs-side_header_shape"></div>
       <a class="cs-site_branding" href="index.html">
-        <img src="assets/img/footer_logo.svg" alt="Logo">
+        <img src="assets/img/logo.svg" alt="Logo">
       </a>
       <div class="cs-side_header_box">
-        <h2 class="cs-side_header_heading">Do you have a project in your  <br> mind? Keep connect us.</h2>
+        <h2 class="cs-side_header_heading">Do you have a project in your  <br> mind? Contact us.</h2>
       </div>
       <div class="cs-side_header_box">
         <h3 class="cs-side_header_title cs-primary_color">Contact Us</h3>
@@ -91,7 +85,7 @@
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M17 12.5C15.75 12.5 14.55 12.3 13.43 11.93C13.08 11.82 12.69 11.9 12.41 12.17L10.21 14.37C7.38 12.93 5.06 10.62 3.62 7.79L5.82 5.58C6.1 5.31 6.18 4.92 6.07 4.57C5.7 3.45 5.5 2.25 5.5 1C5.5 0.45 5.05 0 4.5 0H1C0.45 0 0 0.45 0 1C0 10.39 7.61 18 17 18C17.55 18 18 17.55 18 17V13.5C18 12.95 17.55 12.5 17 12.5ZM9 0V10L12 7H18V0H9Z" fill="#F27777"/>
             </svg>
-            <span>+44 454 7800 112</span>
+            <span>+213 556 04 65 14</span>
           </li>
           <li>
             <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -943,5 +937,11 @@
   <script src="assets/js/plugins/wow.min.js"></script>
   <script src="assets/js/plugins/gsap.min.js"></script>
   <script src="assets/js/main.js"></script>
+  <script>
+    $(function() {
+        $("#footer-placeholder").load("footer.html");
+        $("#header-placeholder").load("header.html");
+    });
+</script>
 </body>
 </html>
